addede hyperlink for urls

--- a/templates/queryInput.html
+++ b/templates/queryInput.html
@@ -14,10 +14,10 @@
 			<label for="env" class="selectLabel">Choose Environment: </label>
 			<select onchange= "jsFunction()" name="env" id="env" class="dbDrop" style="width:200px">
 				<option vlaue="default">----- Select DB -----</option>
-				<option vlaue="Oracle DB">Oracle DB</option>
-				<option vlaue="MSSQL DB">MSSQL DB</option>
-				<option vlaue="MySQL DB">MySQL DB</option>
-				<option vlaue="DB2 DB">DB2 DB</option>
+				<option vlaue="QAWJD4">QAWJD4</option>
+				<option vlaue="QA_WJS2">QA_WJS2</option>
+				<option vlaue="QA_JADE">QA_JADE</option>
+				<option vlaue="demo">demo</option>
 			</select>
 			<label for="tables" class="selectTableLabel">Table: </label>
 			<select class="tables" name="tableDropdown" onchange="getColumn()" id="env1">
